--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/RRHHReportes/ROL_009.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/RRHHReportes/ROL_009.cshtml
@@ -37,14 +37,14 @@
                                 <div class="input-group-addon">
                                     <i class="fa fa-calendar"></i>
                                 </div>
-                                @Html.DevExpress().DateEdit(settings =>
+                                @Html.DevExpress().DateEditFor(q=> q.fecha_ini, settings =>
                             {
                                 settings.Name = "fecha_ini";
                                 settings.Properties.UseMaskBehavior = true;
                                 settings.Properties.EditFormat = EditFormat.Date;
                                 settings.Properties.EditFormatString = "dd/MM/yyyy";
                                 settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
-                                settings.Width = Unit.Percentage(100);
+                                settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
                             }).GetHtml()
                                 @Html.ValidationMessageFor(q => q.fecha_ini, "", new { @class = "text-danger" })
                             </div>
@@ -57,24 +57,21 @@
                                 <div class="input-group-addon">
                                     <i class="fa fa-calendar"></i>
                                 </div>
-                                @Html.DevExpress().DateEdit(settings =>
+                                @Html.DevExpress().DateEditFor(q=> q.fecha_fin, settings =>
                             {
                                 settings.Name = "fecha_fin";
                                 settings.Properties.UseMaskBehavior = true;
                                 settings.Properties.EditFormat = EditFormat.Date;
                                 settings.Properties.EditFormatString = "dd/MM/yyyy";
                                 settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
-                                settings.Width = Unit.Percentage(100);
+                                settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
                             }).GetHtml()
-                                @Html.ValidationMessageFor(q => q.fecha_ini, "", new { @class = "text-danger" })
-
+                                @Html.ValidationMessageFor(q => q.fecha_fin, "", new { @class = "text-danger" })
                             </div>
                         </div>
                     </div>
-
                 </div>
-            </div>
-            <!-- /.box-body -->
+            </div>            <!-- /.box-body -->
         </div>
     </div>
 
