--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/Cliente/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/Cliente/Nuevo.cshtml
@@ -432,7 +432,7 @@
     }
 
     function get_info_tipo_cliente() {
-        var tipo = $("#Idtipo_cliente").val();
+        var tipo = Idtipo_cliente.GetValue()
 
         if (tipo != null) {
             var datos = {
