--- a/ERP/Core.Erp.Web/Areas/Importacion/Views/ParametrosImportacion/_CmbCuenta_contable_inv.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Importacion/Views/ParametrosImportacion/_CmbCuenta_contable_inv.cshtml
@@ -18,7 +18,7 @@
     })
     .BindList(new Core.Erp.Web.Areas.Importacion.Controllers.ParametrosImportacionController().get_list_bajo_demanda_cta, new Core.Erp.Web.Areas.Importacion.Controllers.ParametrosImportacionController().get_info_bajo_demanda_cta)
 
-    .Bind(Model.IdCtaCble);
+    .Bind(Model);
 
 }
 @comboBox.GetHtml()
