--- a/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/ActivoFijo/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/ActivoFijo/Nuevo.cshtml
@@ -37,12 +37,20 @@
             </div>
             <div class="col-md-offset-3 col-md-2">
                 <div class="form-group">
-                    <label for="">Fecha de compra</label>
+                    <label for="Af_fecha_compra">Fecha de compra</label>
                     <div class="input-group date">
                         <div class="input-group-addon">
                             <i class="fa fa-calendar"></i>
                         </div>
-                        @Html.TextBoxFor(q => q.Af_fecha_compra, "{0:dd/MM/yyyy}", new { @class = "form-control", @id = "Af_fecha_compra" })
+                        @Html.DevExpress().DateEditFor(q=> q.Af_fecha_compra, settings =>
+                    {
+                        settings.Name = "Af_fecha_compra";
+                        settings.Properties.UseMaskBehavior = true;
+                        settings.Properties.EditFormat = EditFormat.Date;
+                        settings.Properties.EditFormatString = "dd/MM/yyyy";
+                        settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
+                        settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                    }).GetHtml()
                         @Html.ValidationMessageFor(q => q.Af_fecha_compra, "", new { @class = "text-danger" })
                     </div>
                 </div>
@@ -161,24 +169,40 @@
                         </div>
                         <div class="col-md-2">
                             <div class="form-group">
-                                <label for="">Fecha inicio depreciación</label>
+                                <label for="Af_fecha_ini_depre">Fecha inicio depreciación</label>
                                 <div class="input-group date">
                                     <div class="input-group-addon">
                                         <i class="fa fa-calendar"></i>
                                     </div>
-                                    @Html.TextBoxFor(q => q.Af_fecha_ini_depre, "{0:dd/MM/yyyy}", new { @class = "form-control", @id = "Af_fecha_ini_depre" })
+                                    @Html.DevExpress().DateEditFor(q=> q.Af_fecha_ini_depre, settings =>
+                                {
+                                    settings.Name = "Af_fecha_ini_depre";
+                                    settings.Properties.UseMaskBehavior = true;
+                                    settings.Properties.EditFormat = EditFormat.Date;
+                                    settings.Properties.EditFormatString = "dd/MM/yyyy";
+                                    settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
+                                    settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                                }).GetHtml()
                                     @Html.ValidationMessageFor(q => q.Af_fecha_ini_depre, "", new { @class = "text-danger" })
                                 </div>
                             </div>
                         </div>
                         <div class="col-md-2">
                             <div class="form-group">
-                                <label for="">Fecha fin depreciación</label>
+                                <label for="Af_fecha_fin_depre">Fecha fin depreciación</label>
                                 <div class="input-group date">
                                     <div class="input-group-addon">
                                         <i class="fa fa-calendar"></i>
                                     </div>
-                                    @Html.TextBoxFor(q => q.Af_fecha_fin_depre, "{0:dd/MM/yyyy}", new { @class = "form-control", @id = "Af_fecha_fin_depre" })
+                                    @Html.DevExpress().DateEditFor(q=> q.Af_fecha_fin_depre, settings =>
+                                {
+                                    settings.Name = "Af_fecha_fin_depre";
+                                    settings.Properties.UseMaskBehavior = true;
+                                    settings.Properties.EditFormat = EditFormat.Date;
+                                    settings.Properties.EditFormatString = "dd/MM/yyyy";
+                                    settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
+                                    settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                                }).GetHtml()
                                     @Html.ValidationMessageFor(q => q.Af_fecha_fin_depre, "", new { @class = "text-danger" })
                                 </div>
                             </div>
@@ -306,43 +330,16 @@
 }
 <script>
     $(function () {
-        //Date picker
-        $('#Af_fecha_compra').datepicker({
-            autoclose: true
-        })
-        $('#Af_fecha_ini_depre').datepicker({
-            autoclose: true
-        })
-
-        $('#Af_fecha_fin_depre').datepicker({
-            autoclose: true
-        })
-
         cargar_categoria();
         get_info_tipo();
-        cargar_fecha();
     });
 
     $("#IdActivoFijoTipo").change(function () {
         cargar_categoria();
         get_info_tipo();
-        cargar_fecha();
-    });
-    $("#Af_fecha_ini_depre").change(function () {
-        cargar_fecha();
     });
 
-    function cargar_fecha() {
-        var vida = $("#Af_Vida_Util").val();
 
-        var d = new Date($("#Af_fecha_ini_depre").val());
-        var year = d.getFullYear();
-        var month = d.getMonth();
-        var day = d.getDate();
-
-        var c = new Date(year + Number(vida), month, day)
-        $('#Af_fecha_fin_depre').datepicker("setDate", moment(c).format("DD/MM/YYYY"));
-    }
     function get_info_tipo() {
         var activo = $("#IdActivoFijoTipo").val();
 
